tests/snapshots/run_wpt_conformance__litert_convTranspose2d_default___hardSigmoid.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js convTranspose2d default + hardSigmoid, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dFilter: f32[1, 1, 2, 2];
    convTranspose2dInput: f32[1, 1, 2, 2];
  }

  nodes {
    [operand_2] = convTranspose2d(convTranspose2dInput, convTranspose2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
    [output] = hardSigmoid(operand_2, alpha=0.2, beta=0.5, label="");
  }

  outputs { output; }
}
