tests/snapshots/run_wpt_conformance__litert_convTranspose2d_default___hardSwish.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js convTranspose2d default + hardSwish, litert
 subgraph :: convTranspose2d default + hardSwish: index 0: actual=0.32536796 expected=0.10290758 ulp=13882731 tolerance=16384
  inputs: convTranspose2dFilter: [0.3292713165283203, 0.5866857171058655, 0.29701370000839233, 0.0033378428779542446]; convTranspose2dInput: [0.5872158408164978, 0.6077792048454285, 0.017289165407419205, 0.2614607512950897]
  expected output: [0.10290758, 0.32175565, 0.19947869, 0.09545823, 0.1523037, 0.081738085, 0.0025719544, 0.039864175, 0.0004364844]
  actual output: [0.32536796, 0.18652715, 0.0030099326, 0, -0.000000000000000000000000000000000019871434, 0, 0, 0, 0]
  expected output full nd:
(shape [1, 1, 3, 3])
  [0.10290758, 0.32175565, 0.19947869] [0.09545823, 0.1523037, 0.081738085] [0.0025719544, 0.039864175, 0.0004364844]
  actual output full nd:
(shape [1, 1, 3, 3])
  [0.32536796, 0.18652715, 0.0030099326] [0, -0.000000000000000000000000000000000019871434, 0] [0, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dFilter: f32[1, 1, 2, 2];
    convTranspose2dInput: f32[1, 1, 2, 2];
  }

  nodes {
    [operand_2] = convTranspose2d(convTranspose2dInput, convTranspose2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
    [output] = hardSwish(operand_2, label="");
  }

  outputs { output; }
}
