tests/snapshots/run_wpt_conformance__litert_convTranspose2d_default___leakyRelu.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js convTranspose2d default + leakyRelu, litert
 subgraph :: convTranspose2d default + leakyRelu: index 0: actual=0.5499287 expected=0.19335334 ulp=13027766 tolerance=16384
  inputs: convTranspose2dFilter: [0.3292713165283203, 0.5866857171058655, 0.29701370000839233, 0.0033378428779542446]; convTranspose2dInput: [0.5872158408164978, 0.6077792048454285, 0.017289165407419205, 0.2614607512950897]
  expected output: [0.19335334, 0.5446354, 0.35657537, 0.18010397, 0.2787136, 0.15542395, 0.005135119, 0.077715136, 0.0008727149]
  actual output: [0.5499287, 0.33552796, 0.006007834, 0, -368934870000000000, 1.7718039, -0.00000000000000000000000000000000000039872905, 0.000000000000000000000000000000000000000032661, -0.0000000000000000000000000000000000003986763]
  expected output full nd:
(shape [1, 1, 3, 3])
  [0.19335334, 0.5446354, 0.35657537] [0.18010397, 0.2787136, 0.15542395] [0.005135119, 0.077715136, 0.0008727149]
  actual output full nd:
(shape [1, 1, 3, 3])
  [0.5499287, 0.33552796, 0.006007834] [0, -368934870000000000, 1.7718039] [-0.00000000000000000000000000000000000039872905, 0.000000000000000000000000000000000000000032661, -0.0000000000000000000000000000000000003986763]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dFilter: f32[1, 1, 2, 2];
    convTranspose2dInput: f32[1, 1, 2, 2];
  }

  nodes {
    [operand_2] = convTranspose2d(convTranspose2dInput, convTranspose2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
    [output] = leakyRelu(operand_2, alpha=0.01, label="");
  }

  outputs { output; }
}
